my_wordpress/nginx-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-nginx
  labels:
    app: wordpress
  annotations:
    metallb.universe.tf/address-pool: custom-addresspool
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: wordpress
    tier: nginx
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-nginx
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: nginx
  # replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: nginx
    spec:
      containers:
        - image: nginx:stable-alpine
          name: nginx
          volumeMounts:
            - name: wordpress-nginx
              mountPath: /var/www/html/web
          ports:
            - containerPort: 80
      volumes:
        - name: wordpress-nginx
          persistentVolumeClaim:
            claimName: wp-pv-claim
